--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "tsc && node ./build/index.js",
+        "start": "node ./build/index.js",
+        "build": "tsc",
+        "postinstall": "npm run build",
         "pretify": "npx prettier --write \"./src/*\"",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
