--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "scripts": {
         "start": "node ./build/index.js",
         "build": "tsc",
+        "build-start": "tsc && node ./build/index.js",
         "postinstall": "npm run build",
         "pretify": "npx prettier --write \"./src/*\"",
         "test": "echo \"Error: no test specified\" && exit 1"
