--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "license": "ISC",
     "dependencies": {
         "@types/cors": "^2.8.6",
+        "@types/validator": "^13.0.0",
         "bcrypt": "^4.0.1",
         "body-parser": "^1.19.0",
         "cookie-parser": "^1.4.5",
@@ -28,7 +29,8 @@
         "mongodb": "^3.5.7",
         "passport": "^0.4.1",
         "passport-local": "^1.0.0",
-        "typescript": "^3.8.3"
+        "typescript": "^3.8.3",
+        "validator": "^13.0.0"
     },
     "devDependencies": {
         "@types/bcrypt": "^3.0.0",
